--- a/MuZeCode/settings.gradle
+++ b/MuZeCode/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "MuZe"
+rootProject.name = "MuZeCode"
 include ':app'
