--- a/MuZeCode/settings.gradle
+++ b/MuZeCode/settings.gradle
@@ -9,6 +9,10 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
         mavenCentral()
     }
 }
