--- a/MuZeCode/app/build.gradle
+++ b/MuZeCode/app/build.gradle
@@ -49,6 +49,10 @@ android {
 dependencies {
 
     var media3_version = "1.0.0"
+    var nav_version = "2.5.3"
+
+    //For handling proper permissions
+    implementation "com.google.accompanist:accompanist-permissions:0.20.0"
 
     // For media playback using ExoPlayer
     implementation("androidx.media3:media3-exoplayer:$media3_version")
@@ -118,7 +122,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:extension-cronet:2.18.5'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.5'
     */
-
+    implementation("androidx.navigation:navigation-compose:$nav_version")
     implementation 'androidx.compose.material:material-icons-extended:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     testImplementation 'junit:junit:4.13.2'
