--- a/MuZeCode/app/src/main/AndroidManifest.xml
+++ b/MuZeCode/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize|screenLayout|smallestScreenSize|keyboardHidden"
             android:theme="@style/Theme.MuZeCode">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
