--- a/MuZeCode/app/build.gradle
+++ b/MuZeCode/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("com.google.devtools.ksp") version "1.8.0-1.0.9"
 }
 
 android {
@@ -47,9 +48,18 @@ android {
 }
 dependencies {
 
-    var media3_version = "1.0.0"
+    var media3_version = "1.0.1"
     var nav_version = "2.5.3"
+    var room_version = "2.5.1"
 
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+
+    // To use Kotlin Symbol Processing (KSP)
+    ksp("androidx.room:room-compiler:$room_version")
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
     //For handling proper permissions
     implementation "com.google.accompanist:accompanist-permissions:0.20.0"
 
@@ -109,26 +119,21 @@ dependencies {
 
 
     //OTHERS
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-beta01'
-    /*
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.5'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.18.5'
-    implementation 'com.google.android.exoplayer:extension-cronet:2.18.5'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.5'
-    */
+    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation "androidx.compose.ui:ui:1.4.2"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.4.2"
+    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation 'androidx.compose.material:material-icons-extended:1.4.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     testImplementation 'junit:junit:4.13.2'
     //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.2"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.2"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.2"
 
 }
