--- a/MuZeCode/app/build.gradle
+++ b/MuZeCode/app/build.gradle
@@ -52,14 +52,14 @@ dependencies {
     var nav_version = "2.5.3"
     var room_version = "2.5.1"
 
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-runtime:2.6.0-alpha01")
+    annotationProcessor("androidx.room:room-compiler:2.6.0-alpha01")
 
     // To use Kotlin Symbol Processing (KSP)
-    ksp("androidx.room:room-compiler:$room_version")
+    ksp("androidx.room:room-compiler:2.6.0-alpha01")
 
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$room_version")
+    implementation("androidx.room:room-ktx:2.6.0-alpha01")
     //For handling proper permissions
     implementation "com.google.accompanist:accompanist-permissions:0.20.0"
 
