--- a/MuZeCode/app/build.gradle
+++ b/MuZeCode/app/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     var media3_version = "1.0.1"
     var nav_version = "2.5.3"
     var room_version = "2.5.1"
-
+    implementation("io.coil-kt:coil-compose:2.3.0")
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation("androidx.room:room-runtime:2.6.0-alpha01")
     annotationProcessor("androidx.room:room-compiler:2.6.0-alpha01")
 
